--- a/B1W9O1/assest/style.css
+++ b/B1W9O1/assest/style.css
@@ -17,20 +17,27 @@ img{
 	display: block;
 	width: 1100px;
 	margin: 100px auto;
-	border: 1px solid red;
-}
-.button{
-	display: block;
-	margin-left: 50px;
-	width: 100px;
-	height: 50px;
 	
 }
-.button drank{
+.text{
+	margin-top: 50px auto;
+	text-align: center;
+	color: white;
+}
+#Order{
 	display: block;
-	margin-left: 50px;
+	margin: 0 auto;
 	width: 100px;
 	height: 50px;
-	border: 1px solid red;
+}
+#Order:hover{
+	background-color: green;
+	box-shadow: 10px 10px white;
+
+}
+#receipt{
+	display: block;
+	margin: 50px auto;
 	
+
 }
